syntax = "proto3";

package category;

option go_package = "./pkg/category/pb";

service CategoryService {
  rpc FindOneCategory(FindOneCategoryRequest) returns (FindOneCategoryResponse) {}
  rpc FindAllCategories(FindAllCategoriesRequest) returns (FindAllCategoriesResponse) {}
  rpc FindPaggedCategories(FindPaggedCategoriesRequest) returns (FindPaggedCategoriesResponse) {}
}

// FindOne
message FindOneCategoryData {
  int64 id = 1;
  string name = 2;
}

message FindOneCategoryRequest { int64 id = 1; }

message FindOneCategoryResponse {
  int64 status = 1;
  string error = 2;
  FindOneCategoryData data = 3;
}

// FindAll
message FindCategoryData {
  int64 id = 1;
  string name = 2;
}
message FindAllCategoriesRequest { int64 id = 1; }

message FindAllCategoriesResponse {
  int64 status = 1;
  string error = 2;
  repeated FindCategoryData data = 3;
}

//FindPagged
message FindPaggedCategoriesData {
  int64 id = 1;
  string name = 2;
  int64 department_id = 3;
  string code = 4;
  int64 time_limit = 5;
  int64 question_limit = 6;
  int64 max_question_limit = 7;
}

message FindPaggedCategoriesRequest { 
  int64 departmentId = 1; 
  int64 currentPage = 2; 
  int64 pageSize = 3; 
}

message FindPaggedCategoriesResponse {
  int64 status = 1;
  string error = 2;
  int64 totalPage = 3; 
  repeated FindPaggedCategoriesData data = 4;
}